# proj-sqld

./: .env.example  .gitignore  .prettierrc  README.md  data.csv  data_crawl.py  data_process.py  drizzle.config.js  finish_data.csv  main.py  mysql.py  package.json  pnpm-lock.yaml  pyproject.toml  sqld_kr_data_20250604_153303 copy.csv  sqldata.sql  temp.ipynb  temp.py  turbo.json
apps/backend/: .env example  .env.example  biome.json  drizzle.config.ts  nitro.config.ts  package.json  tsconfig.json
apps/backend/src/: env.ts  index.ts
apps/frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
apps/frontend/src/: env.ts
apps/web/: package.json
crawl/: E_miracle_data_crawl.py  main.py  sqldkr_data_crawl copy.py  sqldkr_data_crawl.py  sqldkr_data_crawl_2.py  sqldkr_data_page_crawl.py  sqldkr_infinity_data_crawl.py
data/: E_miracle_data.csv
docs/: database.md
drizzle/: 0000_gifted_maria_hill.sql  0000_military_omega_sentinel.sql  0000_mushy_loners.sql  0000_yielding_karma.sql  0001_classy_blockbuster.sql  0001_demonic_hannibal_king.sql  0001_unique_betty_brant.sql  0002_dapper_jamie_braddock.sql  0003_secret_champions.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
front/: package-lock.json  package.json
front/src/app/: layout.tsx  page.tsx
process/: data_process.py  download_img.py  img_to_md.py  test.html  test.md
server/: package-lock.json
server/src/: server.js
server/src/routes/: auth.js
sql/: data.csv  data.sql  trans.py  transform.py
(+80 files in other folders)
