[project]
name = "proj-sqld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "ipykernel>=6.29.5",
    "paddleocr>=2.10.0",
    "paddlepaddle-gpu>=2.6.2",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "pymysql>=1.1.1",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
